--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
     </style>
   </head>
   <body>
-    <div class="min-h-screen bg-grey-800 bg-[url(./images/bg-texture.png)]">
+    <div class="min-h-screen">
       <header class="text-gray-600 body-font ml-5">
         <div
           class="container mx-auto flex flex-wrap flex-col md:flex-row items-center"
         >
           <style>
+            body{
+              background-color: #395b64;
+              background-image: url(./images/bg-texture.png);
+            }
             .title-font:hover {
               color: #000000;
               cursor: pointer;
